@@ -4,8 +4,10 @@ using Godot;
 [Tool]
 public abstract partial class CardBaseComponent : Control
 {
+    private double LONG_PRESS_TRESHOLD = 0.5;
     TextureRect Front = null!;
     private bool _pressed = false;
+    private double _pressTimeElapsed = 0;
 
     private bool _currentlyDragged = false;
     public bool CurrentlyDragged { 
@@ -91,9 +93,10 @@ public abstract partial class CardBaseComponent : Control
         // Mouse click or touch
         if (e is InputEventMouseButton mb && mb.ButtonIndex == MouseButton.Left)
         {
-            if(mb.Pressed)
+            if(mb.Pressed && !_pressed)
             {
                 _pressed = true;
+                _pressTimeElapsed = 0;
             }
             else 
             {
@@ -103,9 +106,10 @@ public abstract partial class CardBaseComponent : Control
 
         if (e is InputEventScreenTouch st)
         {
-            if(st.Pressed)
+            if(st.Pressed && !_pressed)
             {
                 _pressed = true;
+                _pressTimeElapsed = 0;
             }
             else 
             {
@@ -114,9 +118,30 @@ public abstract partial class CardBaseComponent : Control
         }
     }
 
+    public override void _Process(double delta)
+    {
+        if (_pressed)
+        {
+            _pressTimeElapsed += delta;
+
+            if (_pressTimeElapsed >= LONG_PRESS_TRESHOLD)
+            {
+                _pressed = false;
+                OnLongPress();
+            }
+        }
+    }
+
+    protected virtual void OnLongPress()
+    {
+        
+    }
+
     private void HandleRelease()
     {
         if(!_pressed) return;
+
+        _pressed = false;
         OnPressed();
     }
 
